# pico-tft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash.sh
src/: CMakeLists.txt  lv_conf.h  lwipopts.h  main.c  secrets.h_TEMPLATE
src/drivers/: CMakeLists.txt  ds3231.c  ds3231.h
src/network/: CMakeLists.txt  net_time.c  net_time.h  wifi.c  wifi.h
